# Gammatech

./: CMakeLists.txt
Client/: CMakeLists.txt
Client/src/: main.cpp
Client/src/gui/: MainWindow.cpp  ViewerDialog.cpp  ViewerDialog.h
Client/src/network/: UdpListener.cpp  UdpListener.h
Interface/: CMakeLists.txt
Simulator/: CMakeLists.txt
Simulator/src/gui/: MainWindow.cpp  MainWindow.h
Simulator/src/network/: UdpServer.cpp  UdpServer.h
buildScripts/linux/: buildLinux.sh
buildScripts/win32/: buildWin32.bat  buildWin64.bat
